--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,18 +6,18 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 01/04/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 2c8fff6d3581ff9aab6c03ed61264219973d8521
-ms.sourcegitcommit: 97d7a00bd39c83a8f6bccb9daa44130a509f75ce
+ms.openlocfilehash: 658b4af73395d47a80df0f57abc1b2e65d811bf8
+ms.sourcegitcommit: d22b3c23c45a076c4f394a70b1c8df2fbcdf656d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54099449"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55428419"
 ---
-# <a name="migrate-from-aspnet-core-22-to-30-preview"></a>Migrer d’ASP.NET Core 2.2 à 3.0 Preview
+# <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a>Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2
 
-Par [Scott Addie](https://github.com/scottaddie)
+Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twitter.com/RickAndMSFT)
 
-Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0.
+Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0 preview 2.
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-3.0.md)]
 
@@ -48,3 +48,30 @@ Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant 
 * Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0. Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)
 
   Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`. La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.
+
+* Ajouter [prise en charge de Json.NET](#json)
+
+<a name="json"></a>
+
+## <a name="jsonnet-support"></a>Prise en charge de Json.NET
+
+Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.NET Core.
+
+Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :
+
+- Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)
+- Mise à jour `ConfigureServices` pour appeler `AddNewtonsoftJson()`.
+
+    ```csharp
+    services.AddMvc()
+        .AddNewtonsoftJson();
+    ```
+
+Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:
+
+    ```csharp
+    services.AddMvc()
+        .AddNewtonsoftJson(options => 
+               options.SerializerSettings.ContractResolver = 
+                  new CamelCasePropertyNamesContractResolver());
+    ```
