--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,32 +6,32 @@ ms.author: tdykstra
 ms.custom: mvc
 ms.date: 01/04/2019
 uid: migration/22-to-30
-ms.openlocfilehash: 2c8fff6d3581ff9aab6c03ed61264219973d8521
-ms.sourcegitcommit: 97d7a00bd39c83a8f6bccb9daa44130a509f75ce
+ms.openlocfilehash: 658b4af73395d47a80df0f57abc1b2e65d811bf8
+ms.sourcegitcommit: d22b3c23c45a076c4f394a70b1c8df2fbcdf656d
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/08/2019
-ms.locfileid: "54099449"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55428419"
 ---
-# <a name="migrate-from-aspnet-core-22-to-30-preview"></a><span data-ttu-id="f5078-103">Migrer d’ASP.NET Core 2.2 à 3.0 Preview</span><span class="sxs-lookup"><span data-stu-id="f5078-103">Migrate from ASP.NET Core 2.2 to 3.0 Preview</span></span>
+# <a name="migrate-from-aspnet-core-22-to-30-preview-2"></a><span data-ttu-id="7e860-103">Migrer d’ASP.NET Core 2.2 à 3.0 Preview 2</span><span class="sxs-lookup"><span data-stu-id="7e860-103">Migrate from ASP.NET Core 2.2 to 3.0 Preview 2</span></span>
 
-<span data-ttu-id="f5078-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="f5078-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="7e860-104">Par [Scott Addie](https://github.com/scottaddie) et [Rick Anderson](https://twitter.com/RickAndMSFT)</span><span class="sxs-lookup"><span data-stu-id="7e860-104">By [Scott Addie](https://github.com/scottaddie) and [Rick Anderson](https://twitter.com/RickAndMSFT)</span></span>
 
-<span data-ttu-id="f5078-105">Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0.</span><span class="sxs-lookup"><span data-stu-id="f5078-105">This article explains how to update an existing ASP.NET Core 2.2 project to ASP.NET Core 3.0.</span></span>
+<span data-ttu-id="7e860-105">Cet article explique comment mettre à jour un projet ASP.NET Core 2.2 existant vers ASP.NET Core 3.0 preview 2.</span><span class="sxs-lookup"><span data-stu-id="7e860-105">This article explains how to update an existing ASP.NET Core 2.2 project to ASP.NET Core 3.0 preview 2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-3.0.md)]
 
-## <a name="update-the-project-file"></a><span data-ttu-id="f5078-106">Mettre à jour le fichier projet</span><span class="sxs-lookup"><span data-stu-id="f5078-106">Update the project file</span></span>
+## <a name="update-the-project-file"></a><span data-ttu-id="7e860-106">Mettre à jour le fichier projet</span><span class="sxs-lookup"><span data-stu-id="7e860-106">Update the project file</span></span>
 
-* <span data-ttu-id="f5078-107">Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks#referring-to-frameworks) à `netcoreapp3.0`:</span><span class="sxs-lookup"><span data-stu-id="f5078-107">Set the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks#referring-to-frameworks) to `netcoreapp3.0`:</span></span>
+* <span data-ttu-id="7e860-107">Définir le [Moniker du Framework (TFM) cible](/dotnet/standard/frameworks#referring-to-frameworks) à `netcoreapp3.0`:</span><span class="sxs-lookup"><span data-stu-id="7e860-107">Set the [Target Framework Moniker (TFM)](/dotnet/standard/frameworks#referring-to-frameworks) to `netcoreapp3.0`:</span></span>
 
   ```xml
   <TargetFramework>netcoreapp3.0</TargetFramework>
   ```
 
-* <span data-ttu-id="f5078-108">Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.</span><span class="sxs-lookup"><span data-stu-id="f5078-108">Remove any `<PackageReference>` to the [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) or [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) metapackage.</span></span>
+* <span data-ttu-id="7e860-108">Supprimez les `<PackageReference>` à la [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) ou [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) métapackage.</span><span class="sxs-lookup"><span data-stu-id="7e860-108">Remove any `<PackageReference>` to the [Microsoft.AspNetCore.All](xref:fundamentals/metapackage) or [Microsoft.AspNetCore.App](xref:fundamentals/metapackage-app) metapackage.</span></span>
 
-  <span data-ttu-id="f5078-109">Il existe un problème connu dans la version préliminaire 1 : les projets qui ne commencent pas par `<Project Sdk="Microsoft.NET.Sdk.Web">` obtenez des erreurs du compilateur ou runtime due à l’absence `Microsoft.AspNetCore.*` assemblys.</span><span class="sxs-lookup"><span data-stu-id="f5078-109">There's a known issue in Preview 1: projects that don't start with `<Project Sdk="Microsoft.NET.Sdk.Web">` get compiler or runtime errors due to missing `Microsoft.AspNetCore.*` assemblies.</span></span> <span data-ttu-id="f5078-110">C’est souvent le cas pour les projets de test et des bibliothèques de classes.</span><span class="sxs-lookup"><span data-stu-id="f5078-110">This is most often the case for test projects and class libraries.</span></span> <span data-ttu-id="f5078-111">La solution de contournement consiste à ajouter le code suivant à la *.csproj* fichier.</span><span class="sxs-lookup"><span data-stu-id="f5078-111">The workaround is to add the following to the *.csproj* file.</span></span>
+  <span data-ttu-id="7e860-109">Il existe un problème connu dans la version préliminaire 1 : les projets qui ne commencent pas par `<Project Sdk="Microsoft.NET.Sdk.Web">` obtenez des erreurs du compilateur ou runtime due à l’absence `Microsoft.AspNetCore.*` assemblys.</span><span class="sxs-lookup"><span data-stu-id="7e860-109">There's a known issue in Preview 1: projects that don't start with `<Project Sdk="Microsoft.NET.Sdk.Web">` get compiler or runtime errors due to missing `Microsoft.AspNetCore.*` assemblies.</span></span> <span data-ttu-id="7e860-110">C’est souvent le cas pour les projets de test et des bibliothèques de classes.</span><span class="sxs-lookup"><span data-stu-id="7e860-110">This is most often the case for test projects and class libraries.</span></span> <span data-ttu-id="7e860-111">La solution de contournement consiste à ajouter le code suivant à la *.csproj* fichier.</span><span class="sxs-lookup"><span data-stu-id="7e860-111">The workaround is to add the following to the *.csproj* file.</span></span>
 
   ```xml
   <ItemGroup>
@@ -39,12 +39,39 @@ ms.locfileid: "54099449"
   </ItemGroup>
   ```
 
-  <span data-ttu-id="f5078-112">Pour plus d’informations, consultez [problème NuGet/accueil #7342](https://github.com/NuGet/Home/issues/7342).</span><span class="sxs-lookup"><span data-stu-id="f5078-112">For more information, see [NuGet/Home issue #7342](https://github.com/NuGet/Home/issues/7342).</span></span>
+  <span data-ttu-id="7e860-112">Pour plus d’informations, consultez [problème NuGet/accueil #7342](https://github.com/NuGet/Home/issues/7342).</span><span class="sxs-lookup"><span data-stu-id="7e860-112">For more information, see [NuGet/Home issue #7342](https://github.com/NuGet/Home/issues/7342).</span></span>
 
-* <span data-ttu-id="f5078-113">Mise à jour le `Version` sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, 3.0.0-preview-18579-0053).</span><span class="sxs-lookup"><span data-stu-id="f5078-113">Update the `Version` on remaining `<PackageReference>` elements for `Microsoft.AspNetCore.*` packages to the current preview (for example, 3.0.0-preview-18579-0053).</span></span>
+* <span data-ttu-id="7e860-113">Mise à jour le `Version` sur restant `<PackageReference>` éléments pour `Microsoft.AspNetCore.*` packages pour la version préliminaire actuelle (par exemple, 3.0.0-preview-18579-0053).</span><span class="sxs-lookup"><span data-stu-id="7e860-113">Update the `Version` on remaining `<PackageReference>` elements for `Microsoft.AspNetCore.*` packages to the current preview (for example, 3.0.0-preview-18579-0053).</span></span>
 
-  <span data-ttu-id="f5078-114">S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0.</span><span class="sxs-lookup"><span data-stu-id="f5078-114">If there is no 3.0 version of a package, the package might have been deprecated in 3.0.</span></span> <span data-ttu-id="f5078-115">Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doivent pas être référencés individuellement plus.</span><span class="sxs-lookup"><span data-stu-id="f5078-115">Many of these are part of `Microsoft.AspNetCore.App` and should not be referenced individually anymore.</span></span> <span data-ttu-id="f5078-116">Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span><span class="sxs-lookup"><span data-stu-id="f5078-116">For a preliminary list of packages no longer produced in 3.0, see [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span></span>
+  <span data-ttu-id="7e860-114">S’il n’existe aucune version 3.0 d’un package, le package peut ont été déconseillé dans 3.0.</span><span class="sxs-lookup"><span data-stu-id="7e860-114">If there is no 3.0 version of a package, the package might have been deprecated in 3.0.</span></span> <span data-ttu-id="7e860-115">Nombre d'entre eux font partie de `Microsoft.AspNetCore.App` et ne doivent pas être référencés individuellement plus.</span><span class="sxs-lookup"><span data-stu-id="7e860-115">Many of these are part of `Microsoft.AspNetCore.App` and should not be referenced individually anymore.</span></span> <span data-ttu-id="7e860-116">Pour obtenir une liste préliminaire des packages ne sont plus produites dans 3.0, consultez [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span><span class="sxs-lookup"><span data-stu-id="7e860-116">For a preliminary list of packages no longer produced in 3.0, see [aspnet/AspNetCore #3756](https://github.com/aspnet/AspNetCore/issues/3756).</span></span>
 
-* <span data-ttu-id="f5078-117">Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0.</span><span class="sxs-lookup"><span data-stu-id="f5078-117">Some assemblies were removed from `Microsoft.AspNetCore.App` between 2.x and 3.0.</span></span> <span data-ttu-id="f5078-118">Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span><span class="sxs-lookup"><span data-stu-id="f5078-118">You may need to add `<PackageReference>` items if you're using APIs from packages listed in [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span></span>
+* <span data-ttu-id="7e860-117">Certains assemblys ont été supprimées de `Microsoft.AspNetCore.App` entre 2.x et 3.0.</span><span class="sxs-lookup"><span data-stu-id="7e860-117">Some assemblies were removed from `Microsoft.AspNetCore.App` between 2.x and 3.0.</span></span> <span data-ttu-id="7e860-118">Vous devrez peut-être ajouter `<PackageReference>` si vous utilisez des API à partir de packages répertoriés dans les éléments [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span><span class="sxs-lookup"><span data-stu-id="7e860-118">You may need to add `<PackageReference>` items if you're using APIs from packages listed in [aspnet/AspNetCore #3755](https://github.com/aspnet/AspNetCore/issues/3755)</span></span>
 
-  <span data-ttu-id="f5078-119">Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`.</span><span class="sxs-lookup"><span data-stu-id="f5078-119">For example, `Microsoft.EntityFrameworkCore` and `System.Data.SqlClient` are no longer part of `Microsoft.AspNetCore.App`.</span></span> <span data-ttu-id="f5078-120">La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.</span><span class="sxs-lookup"><span data-stu-id="f5078-120">The list of assemblies shipping in `Microsoft.AspNetCore.App` hasn't been finalized yet and will change before 3.0 RTM.</span></span>
+  <span data-ttu-id="7e860-119">Par exemple, `Microsoft.EntityFrameworkCore` et `System.Data.SqlClient` font partie n’est plus de `Microsoft.AspNetCore.App`.</span><span class="sxs-lookup"><span data-stu-id="7e860-119">For example, `Microsoft.EntityFrameworkCore` and `System.Data.SqlClient` are no longer part of `Microsoft.AspNetCore.App`.</span></span> <span data-ttu-id="7e860-120">La liste des assemblys d’expédition dans `Microsoft.AspNetCore.App` n’a pas été déjà finalisées et changera avant la version RTM 3.0.</span><span class="sxs-lookup"><span data-stu-id="7e860-120">The list of assemblies shipping in `Microsoft.AspNetCore.App` hasn't been finalized yet and will change before 3.0 RTM.</span></span>
+
+* <span data-ttu-id="7e860-121">Ajouter [prise en charge de Json.NET](#json)</span><span class="sxs-lookup"><span data-stu-id="7e860-121">Add [Json.NET support](#json)</span></span>
+
+<a name="json"></a>
+
+## <a name="jsonnet-support"></a><span data-ttu-id="7e860-122">Prise en charge de Json.NET</span><span class="sxs-lookup"><span data-stu-id="7e860-122">Json.NET support</span></span>
+
+<span data-ttu-id="7e860-123">Dans le cadre du travail à [améliorer framework ASP.NET Core partagé](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) a été supprimé de l’infrastructure partagée ASP.NET Core.</span><span class="sxs-lookup"><span data-stu-id="7e860-123">As part of the work to [improve the ASP.NET Core shared framework](https://blogs.msdn.microsoft.com/webdev/2018/10/29/a-first-look-at-changes-coming-in-asp-net-core-3-0/), [Json.NET](https://www.newtonsoft.com/json/help/html/Introduction.htm) has been removed from the ASP.NET Core shared framework.</span></span>
+
+<span data-ttu-id="7e860-124">Pour utiliser Json.NET dans un projet ASP.NET Core 3.0 :</span><span class="sxs-lookup"><span data-stu-id="7e860-124">To use Json.NET in an ASP.NET Core 3.0 project:</span></span>
+
+- <span data-ttu-id="7e860-125">Ajouter une référence de package à [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span><span class="sxs-lookup"><span data-stu-id="7e860-125">Add a package reference to [Microsoft.AspNetCore.Mvc.NewtonsoftJson](https://nuget.org/packages/Microsoft.AspNetCore.Mvc.NewtonsoftJson)</span></span>
+- <span data-ttu-id="7e860-126">Mise à jour `ConfigureServices` pour appeler `AddNewtonsoftJson()`.</span><span class="sxs-lookup"><span data-stu-id="7e860-126">Update `ConfigureServices` to call `AddNewtonsoftJson()`.</span></span>
+
+    ```csharp
+    services.AddMvc()
+        .AddNewtonsoftJson();
+    ```
+
+<span data-ttu-id="7e860-127">Permet de définir les paramètres de Newtonsoft avec `AddNewtonsoftJson`:</span><span class="sxs-lookup"><span data-stu-id="7e860-127">Newtonsoft settings can be set with `AddNewtonsoftJson`:</span></span>
+
+    ```csharp
+    services.AddMvc()
+        .AddNewtonsoftJson(options => 
+               options.SerializerSettings.ContractResolver = 
+                  new CamelCasePropertyNamesContractResolver());
+    ```
