--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -6,12 +6,12 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 01/12/2019
 uid: migration/21-to-22
-ms.openlocfilehash: cbc9bf112adc231ac8df60e7e4400cc481c87281
-ms.sourcegitcommit: e7276930515216338a33c4a03c0d7a87fc718ffe
+ms.openlocfilehash: 53fc67a249d8a59c1a15d89ded895356221b4b8f
+ms.sourcegitcommit: e418cb9cddeb3de06fa0cb4fdb5529da03ff6d63
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55293492"
+ms.lasthandoff: 02/05/2019
+ms.locfileid: "55739655"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrer d’ASP.NET Core 2.1 vers 2.2
 
@@ -172,9 +172,13 @@ De Visual Studio **la génération automatique de demande de navigateur** expér
 
 ## <a name="update-logging-code"></a>Mettre à jour le code de journalisation
 
-* Déplacement de l’initialisation du fournisseur pour la journalisation `Startup.ConfigureServices`.
+Code de configuration de journalisation recommandée n’a pas changé depuis 2.1 vers 2.2, mais certains modèles de codage 1.x fonctionnaient encore 2.1 n’est plus fonctionnent dans 2.2.
 
-  exemple 2.1 :
+Si votre application effectue l’initialisation de fournisseur de journalisation, le filtrage et la configuration du chargement dans le `Startup` class, déplacer ce code à `Program.Main`:
+
+* Initialisation du fournisseur :
+
+  exemple de 1.x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -186,15 +190,22 @@ De Visual Studio **la génération automatique de demande de navigateur** expér
   exemple 2.2 :
 
   ```csharp
-  public void ConfigureServices(IServiceCollection services)
+
+  public static void Main(string[] args)
   {
-      services.AddLogging(builder => builder.AddConsole());
+      var webHost = new WebHostBuilder()
+          // ...
+          .ConfigureLogging((hostingContext, logging) =>
+          {
+              logging.AddConsole();
+          })
+          // ...
   }
   ```
 
-* Modification de filtrage pour utiliser le <xref:Microsoft.Extensions.DependencyInjection.LoggingServiceCollectionExtensions.AddLogging*> générateur.
+* Filtrage :
 
-  exemple 2.1 :
+  exemple de 1.x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -209,22 +220,28 @@ De Visual Studio **la génération automatique de demande de navigateur** expér
   exemple 2.2 :
 
   ```csharp
-  public void ConfigureServices(IServiceCollection services)
+  public static void Main(string[] args)
   {
-      services.AddLogging(builder => builder
-          .AddConsole()
-          .AddFilter<ConsoleLoggerProvider>
-              (category: null, level: LogLevel.Information)
-          // or
-          .AddFilter<ConsoleLoggerProvider>
-              ((category, level) => category == "A" || level == LogLevel.Critical)
-          );
+      var webHost = new WebHostBuilder()
+          // ...
+          .ConfigureLogging((hostingContext, logging) =>
+          {
+              logging.AddConsole()
+                     .AddFilter<ConsoleLoggerProvider>
+                         (category: null, level: LogLevel.Information)
+                     // or
+                     .AddFilter<ConsoleLoggerProvider>
+                         ((category, level) => category == "A" ||
+                             level == LogLevel.Critical)
+              );
+          })
+          // ...
   }
   ```
 
-* Modifier le chargement de configuration à utiliser le `AddLogging` générateur.
+* Chargement de la configuration :
 
-  exemple 2.1 :
+  exemple de 1.x :
 
   ```csharp
   public void Configure(IApplicationBuilder app, ILoggerFactory loggerFactory)
@@ -236,13 +253,20 @@ De Visual Studio **la génération automatique de demande de navigateur** expér
   exemple 2.2 :
 
   ```csharp
-  public void ConfigureServices(IServiceCollection services)
+  public static void Main(string[] args)
   {
-      services.AddLogging(builder => builder
-          .AddConfiguration(Configuration)
-          .AddConsole());
+      var webHost = new WebHostBuilder()
+          // ...
+          .ConfigureLogging((hostingContext, logging) =>
+          {
+              logging.AddConfiguration(hostingContext.Configuration.GetSection("Logging"));
+              logging.AddConsole();
+          })
+          // ...
   }
   ```
+
+Pour plus d'informations, consultez <xref:fundamentals/logging/index>
 
 ## <a name="additional-resources"></a>Ressources supplémentaires
 
